# MiniRenderer

./: .gitignore  CMakeLists.txt
assets/shaders/: basic.frag  basic.vert  lit.frag  lit.vert  shadow_cube.frag  shadow_cube.vert
src/: main.cpp
src/gfx/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
